# Text_Mining

./: README.md
hive/lleida/: create_db.hql  inserts.hql  queries.hql
hive/lleida/scripts/: load.sh
hive/peru/: create_db.hql  queries.hql
language-detection/tid-language-detector/: README.md
language-detection/tid-language-detector/modid_bin/: mod_ale  mod_bra  mod_cas.new  mod_cat  mod_eus  mod_fra  mod_gal  mod_ing  mod_ita
language-detection/tid-language-detector/modid_txt/: README  README.textos  genera.sh  lista_idiomas.completa  matconf_big  matconf_dic  palabras_excluidas
language-detection/tid-language-detector/src/: CMakeCache.txt  CMakeLists.txt  DetectorIdiomaConfig.cmake  DetectorIdiomaConfig.cmake.in  DetectorIdiomaConfigVersion.cmake  DetectorIdiomaConfigVersion.cmake.in  DetectorIdiomaTargets.cmake  Makefile  cmake_install.cmake
language-detection/tid-language-detector/src/apps/: CMakeLists.txt  Makefile  cmake_install.cmake  z
language-detection/tid-language-detector/src/apps/det_id_analytics/: CMakeLists.txt  Makefile  cmake_install.cmake  det_id_analytics.cpp
language-detection/tid-language-detector/src/apps/det_id_nutch2/: CMakeLists.txt  Makefile  cmake_install.cmake  det_id_nutch2.cpp
language-detection/tid-language-detector/src/apps/gen_mod_idioma/: CMakeLists.txt  Makefile  busca.cpp  cmake_install.cmake  convierte.cpp  detecta.cpp  entrena_Bigrama.cpp  gen_mod_idioma  gen_mod_idioma.cpp  obten_palabras.cpp  pasa_a_arbol.cpp  prueba_car.cpp  test_Detector_id.cpp
language-detection/tid-language-detector/src/libs/: CMakeLists.txt  Makefile  cmake_install.cmake
language-detection/tid-language-detector/src/libs/det_id/: Alinear.cpp  Big_codifica_letra.cpp  Big_convierte.cpp  Big_graba_mod_idioma.cpp  Big_logprob_pal.cpp  Big_prob_pal.cpp  Big_reset_mod_idioma.cpp  Bigrama.cpp  Bigrama.h  CMakeLists.txt  Det_id_interno.h  Makefile  Marcado.h  Marcado_URL.cpp  Pares_caracteres.cpp  Pares_caracteres.h  Pares_secuencias.cpp  Pares_secuencias.h  Sgte_pal.cpp  Transformaciones_may_min.cpp  big_carga_mod_idioma.cpp  big_obten_logprob_mod_idioma.cpp  cmake_install.cmake  det_id_interno.cpp  detector_id.cpp  detector_id_Privado.h  detector_id_int_c.h  dicc.cpp  dicc.h  dicc_sinfrec.h  gen_cars.c  hash.h  img_parcar_segmpal.h  img_parcar_validos.h  img_parsec_markup.h  img_parsec_maymin.h  img_parsec_segmpal.h  lista.h  lista.h.bak  nodos.h  (+1 more)
language-detection/tid-language-detector/src/libs/hdrs/: detector_id.h
masterchef/: README.md  coo2cfg.py  cooking.py  langdetector.py  officialusers.py  preparing.py  serving.py  twittercook.py
masterchef/conf/: masterchef.ini  unicode300.csv  unicode300.hql  unicode400.csv  unicode400.hql  unicode500.csv  unicode500.hql  unicode600.csv  unicode600.hql
masterchef/conf/stopwords/: spanish
masterchef/miscellaneous/: json2csv.py  officialusers.py  parsercrm.py  parserlemmatizer.py  parsertableau.py  parsertass.py  tweetsByConversationTass.py  tweetsbyconversation.py
notebooks/: audio_text_lleida.ipynb  peru_customer_profile.ipynb  peru_test_transcripts.ipynb  test.ipynb
scripts/: addpartition.sh  masterchef.sh  wordcloud.sh
termomix/: Dockerfile  requirements.txt  run_tests.sh
termomix/classification/: common.py  test.py  train.py
termomix/configuration/: __init__.py  lleida_audio_cfg.py  lleida_cfg.py  lleida_hybrid_cfg.py  lleida_text_cfg.py  peru_cfg.py  peru_hybrid_cfg.py  peru_traditional_cfg.py  test_peru_cfg.py  test_webcrawl_cfg.py  twitter.json  webcrawl_cfg.py
termomix/datasets/: base_dataset.py  lleida.py  peru.py  twitter.py  webcrawl.py
termomix/preprocessing/: dtm.py  sampling.py  transformers.py
termomix/utils/: io_tools.py  miscellanea.py  miscellaneous.py
termomix/visualizations/: excel.py  metrics_evaluation.py  wordcloud.py
twittercrawler/: pom.xml
web-crawling/scripts/: create-tableau-csv.sh  print-crawl-statistics.sh  print-dump-statistics.sh  start-crawler.sh  start-hbase-solr.sh  stop-hbase-solr.sh  stop-nutch.sh  utils.sh
wordcloud/: README.md
wordcloud/conf/: wordcloud.json
wordcloud/src/: functions_wordcloud.R  main_wordcloud.R
(+98 files in other folders)
